# jax-perf-bench

./: PACKAGE_SUMMARY.md  Package-Install-Guide.md  README.md  Try-it-with-your-own-code.md  __init__.py  core.py  plotting.py  pyproject.toml  schema.py  setup.py
examples/: atmospheric_examples.py  plotting_demo.py
perfbench/: analysis.py  database.py
